--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<a href="/.netlify/functions/a">function A</a><br/>
-<a href="/.netlify/functions/b">function B</a>
+<a href="/.netlify/functions/a">function A</a> calls function B and will fail when team auth is on.<br/>
+<a href="/.netlify/functions/b">function B</a> will work as expected directly from a browser with a properly authenticated user.
