adds text to index page

--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
+<p>
 <a href="/.netlify/functions/a">function A</a> calls function B and will fail when team auth is on.<br/>
 <a href="/.netlify/functions/b">function B</a> will work as expected directly from a browser with a properly authenticated user.
+</p>
+
+<p>
+    <a href="https://github.com/jcipriano/jc-function-test" target="_blank">source code</a>
+</p>
